@@ -278,14 +278,11 @@
         <version>2.2</version>
         <configuration>
           <port>8080</port>
-          <path>/</path>
+          <url>http://localhost:8080/manager/text</url>  
+          <server>TomcatServer</server>
           <username>admin</username>  
           <password>password</password>      
           <contextReloadable>true</contextReloadable>
-          <systemProperties>
-            <JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
-<!--             <MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8013</MAVEN_OPTS> -->
-          </systemProperties>
         </configuration>
       </plugin>
         
